kubernetes/web-deployment/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webservice
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
  type: ClusterIP
