kubernetes/web-deployment/traefik-ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: website-ingressroute
  namespace: default
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - match: Host(`example.com`)
    kind: Rule
    services:
    - name: webservice
      port: 80
    middlewares:
      - name: security
  tls:
    certResolver: myresolver
    options:
      name: mytlsoption
    domains:
    - main: example.com
      sans:
      - '*.example.com'
